src/OpenCvSharp.Native/include/open_cv_sharp/calib3d/calib3d.h

typedef struct jyppx_ocv_calib3d_usac_params
{
    double confidence;
    int is_parallel;
    int lo_iterations;
    int lo_method;
    int lo_sample_size;
    int max_iterations;
    int neighbors_search;
    int random_generator_state;
    int sampler;
    int score;
    double threshold;
    int final_polisher;
    int final_polisher_iterations;
} jyppx_ocv_calib3d_usac_params;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_essential_mat_usac(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs1,
    const jyppx_ocv_mat* dist_coeffs2,
    jyppx_ocv_mat* mask,
    const jyppx_ocv_calib3d_usac_params* params,
    jyppx_ocv_mat** essential);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_affine_2d_usac(
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* destination,
    jyppx_ocv_mat* transform,
    jyppx_ocv_mat* inliers,
    const jyppx_ocv_calib3d_usac_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_stereo_rectify(
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* dist_coeffs1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs2,
    int image_width,
    int image_height,
    const jyppx_ocv_mat* r,
    const jyppx_ocv_mat* t,
    jyppx_ocv_mat* r1,
    jyppx_ocv_mat* r2,
    jyppx_ocv_mat* p1,
    jyppx_ocv_mat* p2,
    jyppx_ocv_mat* q,
    int flags,
    int new_image_width,
    int new_image_height,
    double balance,
    double fov_scale);