src/OpenCvSharp/Internal/Interop/NativeMethods.Calib3D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_essential_mat_usac")]
        internal static partial int Calib3DFindEssentialMatUsac(IntPtr points1, IntPtr points2, IntPtr cameraMatrix1, IntPtr cameraMatrix2, IntPtr distCoeffs1, IntPtr distCoeffs2, IntPtr mask, Calib3DUsacParamsNative* parameters, out IntPtr essential);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_affine_2d_usac")]
        internal static partial int Calib3DEstimateAffine2DUsac(IntPtr source, IntPtr destination, IntPtr transform, IntPtr inliers, Calib3DUsacParamsNative* parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_stereo_rectify")]
        internal static partial int Calib3DFisheyeStereoRectify(IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int imageWidth, int imageHeight, IntPtr r, IntPtr t, IntPtr r1, IntPtr r2, IntPtr p1, IntPtr p2, IntPtr q, int flags, int newImageWidth, int newImageHeight, double balance, double fovScale);
    }
}
#endif
